@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -XX:MaxPermSize=256M -Xmx1024M -jar "../swagger-codegen/modules/swagger-codegen-cli/target/swagger-codegen-cli.jar" generate -i "../LiveAgent/asterisk-la/server/swagger/calls_internal.yaml" -l python -o "." -c ./client.json
+/home/laz/.jdks/corretto-17.0.4.1/bin/java  -Xmx1024M -jar "swagger-codegen-cli-2.4.44.jar" generate -i "/home/laz/IdeaProjects/LA/asterisk-la/server/swagger/calls_internal.yaml" -l python -o "." -c ./client.json
